--- a/LibMiniWPF/LibMiniWPF.csproj
+++ b/LibMiniWPF/LibMiniWPF.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icon2.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Icon.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
